fix(ux): bad logo alignment on mobile

--- a/src/PublicApp/styles/shell/header.scss
+++ b/src/PublicApp/styles/shell/header.scss
@@ -61,7 +61,9 @@
 	@extend %spinHoverAnimation;
 	background: var(--chromeHeaderBG);
 	@include supports('tiny'){
-		margin-left: -0.3em;
+		align-self: baseline;
+		margin-left: -0.4em;
+		margin-top: -0.2em;
 		padding: 0 0.3em;
 		position: absolute; position: fixed;
 		z-index: 102;
